--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="row">
         <div class="col-sm-1" style="font-size:26px; padding:16px;">8 AM</div>
   
-        <input type="text" name="row" class="col-sm-8" placeholder="Enter new event here" />
+        <input type="text" id="row2" class="col-sm-8" placeholder="Enter new event here" />
   
         <button type="button" id="btn2" class="saveBtn">
          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
@@ -59,7 +59,7 @@
 <div class="row">
         <div class="col-sm-1" style="font-size:26px; padding:16px;">9 AM</div>
   
-        <input type="text" name="row" class="col-sm-8" placeholder="Enter new event here" />
+        <input type="text" id="row3" class="col-sm-8" placeholder="Enter new event here" />
   
         <button type="button" id="btn3" class="saveBtn">
          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
