--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <!-- 1 -->
 <div class="row">
-      <div class="col-sm-1" style="font-size:26px; padding:16px;">7 AM</div>
+      <div class="col-sm-1" style="font-size:26px; padding:16px;">9 AM</div>
 
       <input type="text" id="row1" class="col-sm-8" placeholder="Enter new event here" />
 
@@ -45,7 +45,7 @@
 </div>
       <!-- 2 -->
 <div class="row">
-        <div class="col-sm-1" style="font-size:26px; padding:16px;">8 AM</div>
+        <div class="col-sm-1" style="font-size:26px; padding:16px;">10 AM</div>
   
         <input type="text" id="row2" class="col-sm-8" placeholder="Enter new event here" />
   
@@ -57,7 +57,7 @@
 </div>
       <!-- 3 -->
 <div class="row">
-        <div class="col-sm-1" style="font-size:26px; padding:16px;">9 AM</div>
+        <div class="col-sm-1" style="font-size:26px; padding:16px;">11 AM</div>
   
         <input type="text" id="row3" class="col-sm-8" placeholder="Enter new event here" />
   
@@ -67,8 +67,79 @@
         </svg>
         </button>
 </div>
-<!-- close container div -->
+<!-- 4 -->
+<div class="row">
+    <div class="col-sm-1" style="font-size:26px; padding:16px;">12 PM</div>
+
+    <input type="text" id="row4" class="col-sm-8" placeholder="Enter new event here" />
+
+    <button type="button" id="btn4" class="saveBtn">
+     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
+    </svg>
+    </button>
 </div>
+<!-- 5 -->
+<div class="row">
+    <div class="col-sm-1" style="font-size:26px; padding:16px;">1 PM</div>
+
+    <input type="text" id="row5" class="col-sm-8" placeholder="Enter new event here" />
+
+    <button type="button" id="btn5" class="saveBtn">
+     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
+    </svg>
+    </button>
+</div>
+<!-- 6 -->
+<div class="row">
+    <div class="col-sm-1" style="font-size:26px; padding:16px;">2 PM</div>
+
+    <input type="text" id="row6" class="col-sm-8" placeholder="Enter new event here" />
+
+    <button type="button" id="btn6" class="saveBtn">
+     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
+    </svg>
+    </button>
+</div>
+<!-- 7 -->
+<div class="row">
+    <div class="col-sm-1" style="font-size:26px; padding:16px;">3PM</div>
+
+    <input type="text" id="row7" class="col-sm-8" placeholder="Enter new event here" />
+
+    <button type="button" id="btn7" class="saveBtn">
+     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
+    </svg>
+    </button>
+</div>
+<!-- 8 -->
+<div class="row">
+    <div class="col-sm-1" style="font-size:26px; padding:16px;">4PM</div>
+
+    <input type="text" id="row8" class="col-sm-8" placeholder="Enter new event here" />
+
+    <button type="button" id="btn8" class="saveBtn">
+     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
+    </svg>
+    </button>
+</div>
+<!-- 9 -->
+<div class="row">
+    <div class="col-sm-1" style="font-size:26px; padding:16px;">5PM</div>
+
+    <input type="text" id="row9" class="col-sm-8" placeholder="Enter new event here" />
+
+    <button type="button" id="btn9" class="saveBtn">
+     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" viewBox="0 0 16 16">
+      <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
+    </svg>
+    </button>
+</div>
+</div> <!-- close container div -->
     <script src="./script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
