--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 
   <body>
     <header class="jumbotron">
+        <div class= "container-fluid">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      </div>
     </header>
 <div class="container">
       <!-- Timeblocks go here -->
